--- a/Unity.Editor.csproj
+++ b/Unity.Editor.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\CharObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\BundleMasterEditor\AssetLoadTable.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\BundleMasterEditor\BundleMasterInterface\BundleMasterWindow.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\Util\FrameworkTreeWindow\FrameworkTreeWindow.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\FrameworkTreeWindow\FrameworkTreeWindow.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\BundleMasterEditor\BuildAssets.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\InspectorEditor\LccView\LccViewEditor.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\BundleMasterEditor\DevelopSceneChange.cs" />
@@ -75,7 +75,6 @@
     <Compile Include="Assets\Editor\Runtime\Core\Util\Roslyn\BuildType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\EnumObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectTypeAttribute.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\EditorWindowBase\LayerEditorWindowBase.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\Vector3IntObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\BundleMasterEditor\AssetsLoadSetting.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\BundleMasterEditor\AssetsSetting.cs" />
@@ -93,7 +92,6 @@
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\UnityEngineObjectObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\CreateScript\CreateScriptUtil.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\LongObjectType.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\EditorWindowBase\TagEditorWindowBase.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\MenuItem\Lcc\LccMenuItem.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectTypeUtil.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\IntObjectType.cs" />
@@ -102,11 +100,8 @@
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\FloatObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\RectObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\LogConfig\LogConfigUtil.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\EditorWindowBase\HotfixEditorWindowBase.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\Excel\ExcelExportUtil.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\Preprocess\PreprocessUtil.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\EditorWindowBase\ILRuntimeEditorWindowBase.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\EditorWindowBase\FrameworkEditorWindowBase.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\DateTimeObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\ColorObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\StringObjectType.cs" />
@@ -114,7 +109,13 @@
     <Compile Include="Assets\Editor\Runtime\Core\Util\ObjectType\ObjectType\AnimationCurveObjectType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\Util\Excel\ConfigType.cs" />
     <Compile Include="Assets\Editor\Runtime\Core\BundleMasterEditor\BuildAssetsTools.cs" />
-    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\EditorWindowBase\GeneralEditorWindowBase.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\Util\EditorDefine\EditorDefine.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\GeneralEditorWindow.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\LayerEditorWindow.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\HotfixEditorWindow.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\TagEditorWindow.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\ILRuntimeEditorWindow.cs" />
+    <Compile Include="Assets\Editor\Runtime\Core\OdinEditorWindow\FrameworkEditorWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Editor\Runtime\Core\Template\ModelPanelTemplate.txt" />
