--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\GameSetting\GameSettingManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\DisplayModeType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\EventSystem.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\View\ViewModel\ViewModelBase.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\MVVM\View\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\ArchiveManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\IEvent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\EventManager.cs" />
@@ -75,7 +75,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\ResolutionType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\UserData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\Vector2\Vector2Expand.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\APanelView.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIPanel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Manager\Manager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEvent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\ISingletonUpdate.cs" />
@@ -84,17 +84,19 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\SpriteRenderer\SpriteRendererExpand.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Main\MainPanel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Base\AObjectBase.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\IItemHandler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelType.cs" />
     <Compile Include="Assets\Hotfix\Logic\StatePipeline\EnterMain.cs" />
     <Compile Include="Assets\Hotfix\Runtime\GlobalConfig\AssetType\AssetType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\View\View\AViewBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\ProtobufObject.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\View\Binding\Binding.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\MVVM\View\Binding\Binding.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\SceneStateName.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Command\CommandManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Base\AttributeBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\SceneStateManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIComponent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\Awaiter\AwaiterExpand.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIEffect.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\ISingletonFixedUpdate.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Language\LanguageManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\Byte\ByteExpand.cs" />
@@ -107,7 +109,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\AEvent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Global\GlobalManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Video\VideoManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\View\View\IView.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\MVVM\View\View\IView.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEventType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\Singleton.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Game\GamePanel.cs" />
@@ -124,18 +126,20 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Config\IConfig.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Root.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\StatePipeline.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\IPanelHandler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\ISingletonLateUpdate.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\Panel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\Task\TaskExpand.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Language\LanguageType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Command\CommandType.cs" />
     <Compile Include="Assets\Hotfix\Logic\Camera\SmoothFoolow2D.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIItem.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEventManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Command\CommandData.cs" />
     <Compile Include="Assets\Hotfix\Logic\Camera\CameraController.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEventHandlerAttribute.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Audio\AudioManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\View\Binding\ViewModelBinding.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\MVVM\View\Binding\ViewModelBinding.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Base\IUpdate.cs" />
     <Compile Include="Assets\Hotfix\Logic\SceneState\LoginSceneState.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\CVType.cs" />
@@ -146,6 +150,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\EventType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\EventHandlerAttribute.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Config\ConfigManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIBinding.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelManager.cs" />
   </ItemGroup>
   <ItemGroup>
