--- a/Unity.Combat.csproj
+++ b/Unity.Combat.csproj
@@ -70,10 +70,10 @@
     <Compile Include="Assets\Combat\Runtime\Core\Character\Components\ConditionComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\Effect\EffectActionControlComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\AttributeConfigObject.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\ExpressionHelper.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Base\ExpressionHelper.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Attack\AttackExecution.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectTrigger\EffectIntervalTriggerComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Entity.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Base\Entity.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\Effect.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Condition\ConditionEntity.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectTrigger\EffectConditionTriggerComponent.cs" />
@@ -86,33 +86,49 @@
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\AddSkillEffetTargetType.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\StatusConfigObject.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\DamageType.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\EventComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Base\EventComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Action\Actions\AttackAction.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Character\Components\ActionPointComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Action\Actions\Components\AbilityProbabilityTriggerComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Action\Components\AbilityProbabilityTriggerComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\EffectTriggerType.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Character\CombatEntity.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Action\Actions\Components\ActionComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Action\ActionComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Character\Components\StatusComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\Effect\EffectAttributeModifyComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Ability\IAbilityEntity.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\ModifyType.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Condition\ConditionWhenInTimeNoDamageComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\EffectDecorator\EffectDecorator.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Action\Actions\DamageAbilityComponents\DamageBloodSuckComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Action\Components\DamageBloodSuckComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\AttributeModifyEffect.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\Effect\EffectDecoratosComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\Effect\EffectDamageComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\RandomHelper.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Base\RandomHelper.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\EffectDecorator\DamageReduceWithTargetCountDecorator.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Ability\IAbilityExecution.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Component.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Base\Component.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\ActionControlEffect.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Ability\AbilityLevelComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Attribute\HealthPoint.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Attribute\FloatNumeric.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Status\StatusExecution.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\AddStatusEffect.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectTrigger\EffectActionTriggerComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Character\Components\MotionComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\CustomEffect.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\RemoveStatusEffect.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\ClearAllStatusEffect.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\Effect\EffectAddStatusComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Action\Actions\AddStatusAction.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Status\Components\StatusLifeTimeComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\Effect\EffectCustomComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Action\Actions\AttackBlockAction.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\SkillConfigObject.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\SkillSpellType.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\SkillAffectTargetType.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\SkillTargetSelectType.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Skill\SkillAbility.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Skill\SkillExecution.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Combat\Unity.Combat.asmdef" />
